fix: dropdown, page title vertical alignment

--- a/src/components/reusable/pagetitle/pageTitle.scss
+++ b/src/components/reusable/pagetitle/pageTitle.scss
@@ -70,6 +70,7 @@
 // Contextual dropdown variant
 .contextual-wrapper {
   position: relative;
+  display: inline-block;
 }
 
 .contextual-trigger {
@@ -135,9 +136,9 @@
   padding: 0;
   position: absolute;
   top: 100%;
-  left: 0;
+  left: -6px;
   margin-top: 4px;
-  width: 100%;
+  width: calc(100% + 14px);
   min-width: 120px;
   max-height: 280px;
   overflow-y: auto;
